make AuDoscore pass all Java-17 tests with JDK-21